Update CSS path

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Animated login page 2</title>
-    <link rel="stylesheet" href="Animated login page">
+    <link rel="stylesheet" href="Animated login page.css">
 </head>
 
 <body>
