Updated JavaScript file path

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </form>
         </div>
     </div>
-    <script src="/Javascript file/Script.js"></script>
+    <script src="Script.js"></script>
 </body>
 
 </html>
